first version of the website
rm unnesesarry stuff from DeepThought (e.g, maps)
some minor post template changes:
rm tags
rm categories
add paper link

--- a/sass/deep-thought.sass
+++ b/sass/deep-thought.sass
@@ -16,17 +16,8 @@ body
     flex-direction: column;
     min-height: 100vh;
 
-
-body[theme="dark"]
-    filter: invert(1) hue-rotate(180deg);
-
-
 section
     flex: 1;
 
-
-img[theme="dark"],
-picture[theme="dark"],
-video[theme="dark"],
-pre[theme="dark"]
-    filter: invert(1) hue-rotate(180deg);
+.main_page_content
+    font-size: 1.2rem;
