--- a/templates/404.html
+++ b/templates/404.html
@@ -7,14 +7,8 @@
     <div class="has-text-centered">
       <h1 class="title is-2">HTTP 404</h1>
       <p class="subtitle is-4">
-        It seems you are looking for something that I don't have.
+        These are not the droids you are looking for
       </p>
-      {% if config.extra.author.avatar %}
-      <figure class="image is-flex is-justify-content-center is-align-items-center">
-        <img class="is-rounded" src="{{ config.extra.author.avatar }}" style="max-width: 192px" />
-      </figure>
-      {% endif %}
-      {{ macros:: social_links( social_config=config.extra.social) }}
       <p class="my-6">
         <a href='{{ config.base_url }}'>
           <span class="icon">
