--- a/templates/index.html
+++ b/templates/index.html
@@ -13,7 +13,7 @@
       {% endif %}
       {{ macros:: social_links( social_config=config.extra.social) }}
     </div>
-    <div class="content">
+    <div class="main_page_content">
       {{ section.content | safe }}
     </div>
   </div>
