--- a/templates/macros.html
+++ b/templates/macros.html
@@ -1,22 +1,6 @@
 {% macro social_links(social_config) %}
 <p>
 
-  {% if social_config.google_scholar %}
-  <a href="https://scholar.google.com/citations?user={{ social_config.google_scholar }}" target="_blank">
-    <span class="icon is-large" title="Google Scholar">
-			<i class="ai ai-google-scholar ai-lg"></i>
-    </span>
-  </a>
-  {% endif %}
-
-  {% if social_config.orcid %}
-  <a href="https://orcid.org/{{ social_config.orcid }}" target="_blank">
-    <span class="icon is-large" title="ORCiD">
-      <i class="fab fa-orcid fa-lg"></i>
-    </span>
-  </a>
-  {% endif %}
-
   {% if social_config.facebook %}
   <a href="https://facebook.com/{{ social_config.facebook }}" target="_blank">
     <span class="icon is-large" title="Facebook">
@@ -49,50 +33,10 @@
   </a>
   {% endif %}
 
-  {% if social_config.gitlab %}
-  <a href="https://gitlab.com/{{ social_config.gitlab }}" target="_blank">
-    <span class="icon is-large" title="GitLab">
-      <i class="fab fa-gitlab fa-lg"></i>
-    </span>
-  </a>
-  {% endif %}
-
-  {% if social_config.stackoverflow %}
-  <a href="https://stackoverflow.com/users/{{ social_config.stackoverflow }}" target="_blank">
-    <span class="icon is-large" title="Stack Overflow">
-      <i class="fab fa-stack-overflow fa-lg"></i>
-    </span>
-  </a>
-  {% endif %}
-
-  {% if social_config.keybase %}
-  <a href="https://keybase.io/{{ social_config.keybase }}" target="_blank">
-    <span class="icon is-large" title="Keybase">
-      <i class="fab fa-keybase fa-lg"></i>
-    </span>
-  </a>
-  {% endif %}
-
-  {% if social_config.mastodon %}
-  <a href="https://mastodon.social/{{ social_config.mastodon }}" target="_blank">
-    <span class="icon is-large" title="Mastodon">
-      <i class="fab fa-mastodon fa-lg"></i>
-    </span>
-  </a>
-  {% endif %}
-
   {% if social_config.instagram %}
   <a href="https://www.instagram.com/{{ social_config.instagram}}" target="_blank">
     <span class="icon is-large" title="Instagram">
       <i class="fab fa-instagram fa-lg"></i>
-    </span>
-  </a>
-  {% endif %}
-
-  {% if social_config.behance %}
-  <a href="https://www.behance.net/{{ social_config.behance }}" target="_blank">
-    <span class="icon is-large" title="Behance">
-      <i class="fab fa-behance fa-lg"></i>
     </span>
   </a>
   {% endif %}
@@ -113,21 +57,30 @@
   </a>
   {% endif %}
 
-  {% if social_config.googleplay %}
-  <a href="https://play.google.com/store/apps/developer?id={{ social_config.googleplay }}&hl=en" target="_blank">
-    <span class="icon is-large" title="Google play">
-      <i class="fab fa-google-play fa-lg"></i>
+  {% if social_config.google_scholar %}
+  <a href="https://scholar.google.com/citations?user={{ social_config.google_scholar }}" target="_blank">
+    <span class="icon is-large" title="Google Scholar">
+			<i class="ai ai-google-scholar ai-lg"></i>
     </span>
   </a>
   {% endif %}
 
-  {% if config.generate_feed %}
-  <a href="{{ config.base_url }}/{{ config.feed_filename }}" target="_blank">
-    <span class="icon is-large" title="RSS Feed">
-      <i class="fas fa-rss fa-lg"></i>
+  {% if social_config.telegram %}
+  <a href="https://t.me/{{ social_config.telegram }}" target="_blank">
+    <span class="icon is-large" title="Telegram">
+      <i class="fab fa-telegram fa-lg"></i>
     </span>
   </a>
   {% endif %}
+
+  {% if social_config.cv %}
+  <a href="{{ social_config.cv }}" target="_blank">
+    <span class="icon is-large" title="CV">
+      <i class="ai ai-cv" style="font-size: 1.5em"></i>
+    </span>
+  </a>
+  {% endif %}
+
 </p>
 {% endmacro %}
 
